# ValidacaoXML_MEC

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
resources/icp_brasil/: README.txt
scripts/: build_exe.ps1  build_exe_unico.ps1  download_icp_certs.py  download_schemas.py
src/validacao_xml/: __init__.py  config.py  main.py
src/validacao_xml/core/: detector.py  models.py  pipeline.py  xsd_messages.py  xsd_validator.py
src/validacao_xml/core/business_rules/: __init__.py  base.py  curriculo.py  diploma.py  doc_academica.py  fiscalizacao.py  historico.py  lista_anulados.py
src/validacao_xml/core/signature/: icp_brasil.py  policies.py  verifier.py
src/validacao_xml/gui/: app.py  components.py  issue_help.py
src/validacao_xml/schemas/: manifest.json  normalize.py  sync.py
src/validacao_xml/schemas/bundled/: ListaDiplomasAnulados_v1.05.xsd  leiauteListaDiplomasAnulados_v1.05.xsd
tests/: test_business_rules.py  test_detector.py  test_examples.py  test_icp_certs.py  test_issue_help.py  test_pipeline.py  test_schema_sync.py  test_signature.py  test_xsd_messages.py
tests/fixtures/: diploma_homologacao.xml  diploma_invalid_id.xml  malformed.xml  unknown_root.xml
