[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "validacao-xml"
version = "0.1.0"
description = "Validador de XML Digital (MEC) para Windows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Perseus" }]
dependencies = [
    "customtkinter>=5.2.0",
    "darkdetect>=0.8.0",
    "httpx>=0.27.0",
    "lxml>=5.0.0",
    "signxml>=4.0.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
validacao-xml = "validacao_xml.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
validacao_xml = ["schemas/manifest.json", "schemas/bundled/*.xsd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
